--- a/ecmoney.html
+++ b/ecmoney.html
@@ -223,10 +223,10 @@
     const referenceCode = 'aHR0cHM6Ly9pbXByb3Blcm1vbGVjdWxlc2hpbGxpbmcuY29tL25lcDJoODh6P2tleT0zYWVjNDliMGRiM2Q4YjAwMzhmYzRkZDFkYmRhNTc4NQ==';
  
     let links = [
-      'https://www.profitablecpmrate.com/mt4gw9uf?key=ee4da94b77108c7231dacd29bad03cb7', // Dito ilalagay Direct Link
-      'https://www.profitablecpmrate.com/gnzy62i19?key=f9592dea2ab342d122496d2b2c26392a', // Dito ilalagay Direct Link
-      'https://www.profitablecpmrate.com/dj8q6qhe?key=a52626be98b3ea87adf267e65a4a58fb', // Dito ilalagay Direct Link
-      'https://www.profitablecpmrate.com/fumfjakvv?key=4bbb5363dd37f4e85c3819a1a8e4c3d3' // Dito ilalagay Direct Link
+      'https://www.profitablecpmrate.com/mt4gw9uf?key=ee4da94b77108c7231dacd29bad03cb7', // Use your Own Direct Link Here
+      'https://www.profitablecpmrate.com/gnzy62i19?key=f9592dea2ab342d122496d2b2c26392a', // Use your Own Direct Link Here
+      'https://www.profitablecpmrate.com/dj8q6qhe?key=a52626be98b3ea87adf267e65a4a58fb', // Use your Own Direct Link Here
+      'https://www.profitablecpmrate.com/fumfjakvv?key=4bbb5363dd37f4e85c3819a1a8e4c3d3' // Use your Own Direct Link Here
     ];
     let currentIndex = 0;
     let autoNavigateInterval;
